src/App.css
html {
  text-align: center;
  background: #FFF2D0;
}

body {
  padding: 0;
  margin: 0;
}

.App {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.startScreen {
  display: flex;
  padding-bottom: 0px;
  flex-direction: column;
  align-items: center;
  gap: 24px;
}

ul .selected-answer {
  border-radius: 36px;
  border: 4px solid #F1C70B;
  background: #F1C70B;
}

ul .unselected-answer {
  border-radius: 36px;
  border: 4px solid #F1C70B;
  background: #FFF;
}

ul .unselected-answer:hover {
  border-radius: 36px;
  border: 4px solid #F1C70B;
  background: #FDF7D8;
}

ul li {
  padding: 30px;
  cursor: pointer !important;
}

.pusheen {
  width: 100%;
  max-width: 500px;
}

h1 {
  margin: 0;
}

h3 {
  margin: 0;
}

.result-message {
  color: #086788;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 40px */
  letter-spacing: -0.32px;
}

.result {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.result-heading {
  color: #086788;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 48px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 60px */
  letter-spacing: -0.48px;
}

.quiz-heading {
  color: #086788;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 64px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 80px */
  letter-spacing: -0.64px;
}

.total-score-heading {
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 28px;
  margin-top: auto;
}

.quiz-questions {
  color: #086788;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 40px */
  letter-spacing: -0.32px;
}

.your-score {

  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 28px;
  margin-top: auto;
}

.logoPics {

  display: grid;
  grid-template-columns: max-content max-content;
  gap: 30px;
  padding: 0;
  justify-content: center;
  margin: 20px;

}

/* .logoPics {

  @media screen and (max-width: 600px) {
    display: flex;
    flex-wrap: wrap;


  }
} */


.disabledQuizButton {
  display: flex;
  padding: 18px 32px 20px 32px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  border-radius: 20px;
  border: 4px solid #E5616C;
  opacity: 0.5;
  color: #086788;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

.quizButton {
  border-radius: 20px;
  border: 4px solid #E3636E;
  background: #EA7B85;
  color: #FFF2D0;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  display: flex;
  padding: 18px 32px 20px 32px;
  justify-content: center;
  align-items: center;
  gap: 8px;
}

.quizButton:hover {
  cursor: pointer;
  border-radius: 20px;
  border: 4px solid #E5616C;
  background: #E5616C;
}

/* Outside curly brackets is our selector. Classname and ID are 'special' names. Target className with "." */
/* 'li' list tag inside logoPics className */

.logoPics li {

  list-style: none;



}


.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.perfectScore {
  color: #06AED5;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 64px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 80px */
  letter-spacing: -0.64px;
}

.okScore {
  color: #F1C70B;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 64px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 80px */
  letter-spacing: -0.64px;
}

.badScore {
  color: #E3636E;
  font-family: Comic Sans MS, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 64px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%;
  /* 80px */
  letter-spacing: -0.64px;
}

